docs: add documentation for election and election info
